pyui-app/pyui-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyui-app
  template:
    metadata:
      labels:
        app: pyui-app
    spec:
      containers:
       - name: pyui-app
         image: thanabodin/pyui-app-test:0.0.3
         ports:
         - containerPort: 3000
