pyui-app/pyui-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyui-app
spec:
  selector:
    app: pyui-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
